--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,8 +1,8 @@
 /*=== MEDIA QUERY ===*/
-@import url(http://fonts.googleapis.com/css?family=Lato:200,400,100,300,500,700);
-@import url(http://fonts.googleapis.com/css?family=Garamond:400italic);
-@import url(http://fonts.googleapis.com/css?family=Jura:100,200,300,400,500);
-@import url(http://fonts.googleapis.com/css?family=Calibri:100,200,300,400,500);
+@import url(https://fonts.googleapis.com/css?family=Lato:200,400,100,300,500,700);
+@import url(https://fonts.googleapis.com/css?family=Garamond:400italic);
+@import url(https://fonts.googleapis.com/css?family=Jura:100,200,300,400,500);
+@import url(https://fonts.googleapis.com/css?family=Calibri:100,200,300,400,500);
 body {
 	font-size: 16px;
   line-height: 1.5;
