Updates to the docs page and its style.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -940,9 +940,9 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 
 .portfolio-work .block .portfolio-menu ul .mixitup-control-active {
-  background: #332954;
+  background: #150e2d;
   color: #fff;
-  border: 1px solid #332954;
+  border: 1px solid #150e2d;
 }
 
 .portfolio-work .block .portfolio-contant ul li {
