--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -2,11 +2,11 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:200,400,100,300,500,700);
 @import url(https://fonts.googleapis.com/css?family=Garamond:400italic);
 @import url(https://fonts.googleapis.com/css?family=Jura:100,200,300,400,500);
-@import url(https://fonts.googleapis.com/css?family=Calibri:100,200,300,400,500);
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 body {
 	font-size: 16px;
   line-height: 1.5;
-  font-family: "Calibri";
+  font-family: 'Open Sans', sans-serif;
   font-weight: light;
   -webkit-font-smoothing: antialiased;
 }
@@ -48,8 +48,8 @@ a:visited {
 p {
   color: #000000;
   font-size: 16px;
-  font-weight: normal;
-  font-family: "Calibri";
+  font-weight: 300;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /*
@@ -286,8 +286,8 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 
 .section-title h2 {
   text-transform: uppercase;
-  font-size: 28px;
-  font-weight: 600;
+  font-size: 30px;
+  font-weight: 400;
 }
 
 .section-title p {
@@ -322,6 +322,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
   color: #fff;
   font-weight: 300;
   font-family: "Lato";
+  letter-spacing: 2px;
 }
 
 .heading {
@@ -2175,8 +2176,9 @@ font header .navbar-default .navbar-nav li a:hover {
   margin-bottom: 15px;
   padding-bottom: 10px;
   font-size: 16px;
-  color: #333;
-  font-weight: 500;
+  color: #000;
+  font-weight: light;
+  font-family: 'Open Sans', sans-serif;
   border-bottom: 1px solid #dedede;
 }
 
@@ -2187,17 +2189,22 @@ font header .navbar-default .navbar-nav li a:hover {
 
 .widget.widget-latest-post .media .media-heading a {
   color: #000000;
-  font-size: 16px;
+  font-weight: light;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
 }
 
 .widget.widget-latest-post .media p {
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: lighter;
+  font-family: 'Open Sans', sans-serif;
   color: #000000;
 }
 
 .widget.widget-category ul li {
-	font-size: 14px;
-	font-family: "Lato";
+  font-size: 14px;
+  font-weight: lighter;
+  font-family: 'Open Sans', sans-serif;
   margin-bottom: 10px;
 }
 
